Create attendance table; many to many relationship

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
          <p> <%= event.location %></p>
         </div>
         <div class="time">
-          Time: <%= event.time %>
+          Time: <%= event.time.strftime("%H:%M - %d/%m/%Y") %>
         </div>
         <%= link_to "Details", event_path(id: event.id) %>
         </section>
