--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,14 +1,24 @@
 <h1>Events#show</h1>
 
 <section>
-        <div class="content">
-         <h3> <%= @event.name %></h3>
-        <p>  <%= @event.description %></p>
-         <p> <%= @event.location %></p>
-        </div>
-        <div class="time">
-          Time: <%= @event.time %>
-        </div>
+  <div class="content">
+   <h3> <%= @event.name %></h3>
+   <p>  <%= @event.description %></p>
+   <p> <%= @event.location %></p>
+  </div>
+  <div class="time">
+    Time: <%= @event.time %>
+  </div>
+
+  <h2>Attendees List</h2>
+  <% if @event.attendees.any? %>
+        <ol>
+        <% @event.attendees.each do |attendee| %>
+          <li><%= attendee %></li>
+        <% end %>
+        </ol>
+  <% else %>
+        <p>No attendees for this event yet</p>
+  <% end %>
 </section>
 <%= link_to "Show all events", events_path%>
-
