--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,7 @@
 
 <div class="row">
   <div class="form-container">
+    <h3 class="text-center">Welcome</h3>
     <%= form_for(:user, html: {class: "signup-form"}) do |f| %>
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -10,7 +11,7 @@
       <%= f.label :email %>
       <%= f.email_field :email %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "Create my account", class: "btn signup-btn btn-warning" %>
     <% end %>
-  </div>
+  </div
 </div>
