--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,8 +2,11 @@
 <main class="col-md-8">
   <h3>Event List</h3>
   <% if @events.any? %>
+
+ <% if @events.past.any? %>
+    <h4>Past Event List</h4>
     <ol class="events">
-    <% @events.each do |event| %>
+    <% @events.past.each do |event| %>
       <li id="events-<%= event.id %>">
         <span class="content">
           <%= event.name %>
@@ -17,5 +20,28 @@
       </li>
     <% end %>
     </ol>
+    <% end %>
+
+
+ <% if @events.upcoming.any? %>
+    <h4>Upcoming Event List</h4>
+    <ol class="events">
+    <% @events.upcoming.each do |event| %>
+      <li id="events-<%= event.id %>">
+        <span class="content">
+          <%= event.name %>
+          <%= event.description %>
+          <%= event.location %>
+        </span>
+        <span class="time">
+          Time: <%= event.time %> 
+        </span>
+        <%= link_to "Details", event_path(id: event.id) %>
+      </li>
+    <% end %>
+    </ol>
+    <% end %>
+
+
   <% end %>
 </main>
