--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,20 @@
 <% provide(:title, 'Sign up') %>
-<h1 class="page-heading" >Sign up</h1>
 
-<div class="row">
-  <div class="form-container">
-    <h3 class="text-center">Welcome</h3>
+<section class="first-section">
+
+  <h1 class="centered-text" >Sign up</h1>
+
+  <div class="form">
     <%= form_for(:user, html: {class: "signup-form"}) do |f| %>
+
       <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, class: "form-control" %>
 
       <%= f.label :email %>
-      <%= f.email_field :email %>
+      <%= f.email_field :email, class: "form-control" %>
 
-      <%= f.submit "Create my account", class: "btn signup-btn btn-warning" %>
+      <%= f.submit "Create new account", class: "btn btn-primary" %>
     <% end %>
-  </div
-</div>
+  </div>
+
+</section>
