--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,10 +3,10 @@
 
 <p>Create a new <%= link_to "event", "events/new" %></p>
 
-  <% if @user.events.any? %>
+  <% if @user_events.any? %>
     <h3>Events created by you:</h3>
     <ol class="events">
-    <% @user.events.each do |event| %>
+    <% @user_events.each do |event| %>
       <li id="events-<%= event.id %>">
       <section>
         <div class="content">
@@ -25,8 +25,6 @@
   <% else %>
     <h3>You didn't create any events yet.</h3>
   <% end %>
-
-  <% if @user.attended_events.any? %>
 
     <h3>Attending events:</h3>
 
@@ -49,12 +47,14 @@
     </li>
   <% end %>
     </ol>
+  <% else %>
+    <h4>No upcoming events</h4>
   <% end %>
 
- <% if @prev_events.any? %>
-    <h4> Past Events (<%= @prev_events.count %>) </h4>
+ <% if @past_events.any? %>
+    <h4> Past Events (<%= @past_events.count %>) </h4>
     <ol class="events">
-    <% @prev_events.each do |event| %>
+    <% @past_events.each do |event| %>
     <li id="events-<%= event.id %>">
     <section>
       <div class="content">
@@ -70,8 +70,6 @@
     </li>
   <% end %>
     </ol>
-  <% end %>
-
   <% else %>
-    <h3>Attending to no events yet</h3>
+    <h4>No past events</h4>
   <% end %>
