--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,28 +2,46 @@
 
 <section>
   <div class="content">
-   <h3> <%= @event.name %></h3>
-   <p>  <%= @event.description %></p>
-   <p> <%= @event.location %></p>
-  </div>
-  <div class="time">
-    Time: <%= @event.time %>
-  </div>
+    <h3>
+      <%= @event.name %></h3>
+    <p>Description:
+      <%= @event.description %></p>
+    <p>Location:
+      <%= @event.location %></p>
 
-  <p>Created by: <%= current_user.name %></p>
+    <% if @is_upcoming %>
+      <p>
+        It will take place:
+    <% else %>
+        <p>It took place:
+    <% end %>
+        <%= @event.time.strftime("%d/%m/%Y") %>
+      </p>
+      <p>Created by:
+        <%= @event.creator %></p>
+    </div>
 
-  <br>
-  <h3>Attendees List</h2>
-  <% if @event.attendees.any? %>
-        <ol>
+    <% if @user && @is_upcoming %>
+
+      <% unless @user.attended_events.include?(@event) %>
+
+        <%= link_to "Attend to event", attend_path(id: @event.id), method: :patch, class: "btn btn-primary" %>
+
+      <% else %>
+
+        <%= link_to "Not going anymore", not_attend_path(id: @event.id), method: :delete, class: "btn btn-danger" %>
+
+      <% end %>
+    <% end %>
+
+    <h3>Attendees List</h3>
+    <% if @event.attendees.any? %>
+      <ol>
         <% @event.attendees.each do |attendee| %>
           <li><%= attendee.name %></li>
         <% end %>
-        </ol>
-  <% else %>
-        <p>No attendees for this event yet</p>
-  <% end %>
-  <br>
-</section>
-  <br>
-<%= link_to "Show all events", events_path%>
+      </ol>
+    <% else %>
+      <p>No attendees for this event yet</p>
+    <% end %>
+  </section>
