--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
       <h3>
         Hi there <%= @user.name %>,
         <% if @upcoming_events.count > 0 %>
-          you have <%= @upcoming_events.count %> to attend.</h3>
+          you have <%= @upcoming_events.count %> event(s) to attend.</h3>
 
           <div class="attending-events-container">
 
